# brok

./: .gitignore  README.md  pyproject.toml
brok/: kb.py  kb_patterns.py  kb_strategies.py  kb_tech.py  models.py  nfr.py  pipeline.py  query.py  report.py  server.py  tradeoffs.py  voice.py
brok/benchmark/: golden.py  runner.py  scorer.py
brok/lenses/: capacity.py  cost.py  latency.py
brok/linters/: antipatterns.py
brok/parsers/: compose.py
docs/: brok-voice.md
docs/superpowers/plans/: 2026-06-29-brok-latency-cost-lenses.md  2026-06-29-brok-tradeoff-layer.md  2026-06-29-brok-voice-roast-renderer.md  2026-06-29-sindri-capacity-skeleton.md  2026-06-29-sindri-golden-benchmark.md  (+1 more)
scripts/: bench.py  bench_llm.py  bench_query.py
sindri/: kb.py  models.py  nfr.py  pipeline.py  report.py  server.py
sindri/benchmark/: golden.py  runner.py  scorer.py
sindri/lenses/: capacity.py
sindri/parsers/: compose.py
skill/: SKILL.md
tests/: test_antipatterns.py  test_benchmark_acceptance.py  test_capacity.py  test_compose.py  test_cost.py  test_golden_cases.py  test_golden_model.py  test_kb.py  test_kb_patterns.py  test_kb_strategies.py  test_kb_tech.py  test_knee_voice.py  test_latency.py  test_models.py  test_nfr.py  test_pipeline.py  test_pipeline_core.py  test_pipeline_entries.py  test_query.py  test_query_guard.py  test_render_roast.py  test_report.py  test_roast_wiring.py  test_runner.py  test_scorer.py  test_server_query.py  test_server_tools.py  test_tradeoff_surface.py  test_tradeoffs.py  test_triggers.py  test_voice.py
(+2 files in other folders)
