[project]
name = "sindri"
version = "0.1.0"
description = "Sindri: an MCP that reviews architecture, estimates capacity, and roasts bad design decisions."
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.0", "pydantic>=2.6", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sindri"]

[tool.pytest.ini_options]
addopts = "-q"
